# smartcore_vs_linfa

./: Cargo.toml  README.md  _config.yml
.github/workflows/: benchmarks.yml
benches/: my_benchmark.rs
criterion/DBSCAN Clustering/Large_Linfa/base/: estimates.json  raw.csv  sample.json  tukey.json
criterion/DBSCAN Clustering/Large_Linfa/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
criterion/DBSCAN Clustering/Large_Linfa/report/: index.html
criterion/DBSCAN Clustering/Large_Smart/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
criterion/DBSCAN Clustering/Large_Smart/new/: estimates.json  raw.csv  sample.json  tukey.json
criterion/DBSCAN Clustering/Large_Smart/report/: index.html
criterion/DBSCAN Clustering/Large_Smartcore/base/: estimates.json  raw.csv  sample.json  tukey.json
criterion/DBSCAN Clustering/Large_Smartcore/new/: benchmark.json  tukey.json
criterion/DBSCAN Clustering/Large_Smartcore/report/: index.html
criterion/DBSCAN Clustering/Linfa/base/: estimates.json  raw.csv  sample.json  (+1 more)
criterion/DBSCAN Clustering/report/: index.html
criterion/Decision Tree Classification/report/: index.html
criterion/Elastic Net/report/: index.html
criterion/Gaussian Naive Bayes/report/: index.html
criterion/K-Means Clustering/report/: index.html
criterion/Linear Regression/report/: index.html
criterion/Logistic Regression/report/: index.html
criterion/PCA/report/: index.html
criterion/Support Vector Classification/report/: index.html
criterion/Support Vector Regression/report/: index.html
criterion/report/: index.html
src/: classification.rs  clustering.rs  dimensionality_reduction.rs  lib.rs  regression.rs  utils.rs
(+753 files in other folders)
