[package]
name = "smartcore_vs_linfa"
version = "0.1.0"
edition = "2021"

[dependencies]
smartcore = "0.2.0"
linfa = {version="0.5.0", features=["openblas-static"]}
linfa-linear = "0.5.0"
linfa-logistic = "0.5.0"
linfa-clustering = "0.5.0"
linfa-elasticnet = "0.5.0"
linfa-trees = "0.5.0"
linfa-reduction = "0.5.0"
linfa-bayes = "0.5.0"
ndarray = "0.15.4"
rand = "0.8.4"
rand_distr = "0.4.2"

[dev-dependencies]
criterion = {version="0.3", features=["html_reports"]}

[[bench]]
name = "my_benchmark"
harness = false