[package]
name = "smartcore_vs_linfa"
version = "0.1.0"
edition = "2021"

[dependencies]
smartcore = "*"
linfa = {version="*", features=["openblas-static"]}
linfa-linear = "*"
linfa-logistic = "*"
linfa-clustering = "*"
linfa-elasticnet = "*"
linfa-trees = "*"
linfa-reduction = "*"
linfa-bayes = "*"
linfa-svm = "*"
ndarray = "0.15.4"
rand = "0.8.4"
rand_distr = "0.4.2"

[dev-dependencies]
criterion = {version="0.3", features=["html_reports"]}

[[bench]]
name = "my_benchmark"
harness = false
