[package]
name = "smartcore_vs_linfa"
version = "0.1.0"
edition = "2021"

[dependencies]
smartcore = { version = "0.4.2", features = ["datasets"] }
linfa = "0.7.1"
linfa-linear = "0.7.1"
linfa-logistic = "0.7.1"
linfa-clustering = "0.7.1"
linfa-elasticnet = "0.7.1"
linfa-trees = "0.7.1"
linfa-reduction = "0.7.1"
linfa-bayes = "0.7.1"
linfa-svm = "0.7.1"
ndarray = "0.15.6"
rand = "0.8.5"
rand_distr = "0.4.3"
once_cell = "1.19.0"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
